AIFU-bot/process.exit()
Welcome to Node.js v24.14.0.
Type ".help" for more information.
> > const { Telegraf } = require('telegraf');
^

Uncaught SyntaxError: Unexpected token '>'
> > const bot = new Telegraf('TU_TOKEN_AQUI');
^

Uncaught SyntaxError: Unexpected token '>'
> > bot.telegram.getUpdates().then(console.log);
^

Uncaught SyntaxError: Unexpected token '>'
> > process.exit(); node
^

Uncaught SyntaxError: Unexpected token '>'
> > const { Telegraf } = require('telegraf');
^

Uncaught SyntaxError: Unexpected token '>'
> > const bot = new Telegraf('TU_TOKEN_AQUI');
^

Uncaught SyntaxError: Unexpected token '>'
> > bot.telegram.getUpdates().then(console.log);
^

Uncaught SyntaxError: Unexpected token '>'
> > process.exit();pm2 start bot.js --name AIFU-bot
^

Uncaught SyntaxError: Unexpected token '>'
> 